<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <include
        android:id="@+id/include"
        layout="@layout/activity_base"
        app:layout_constraintBottom_toBottomOf="@+id/profile_show_friend_list_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="46dp" />

    <TextView
        android:id="@+id/profile_textView_uploadImageHint"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/upload_your_profile_picture"
        android:textAlignment="center"
        android:textColor="@color/color5"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_imageView_image"/>

    <ImageView
        android:id="@+id/profile_imageView_image"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:src="@drawable/profile"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/profile_textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/my_name"
        android:layout_gravity="center"
        android:textColor="@color/color5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_imageView_image" />

    <TextView
        android:id="@+id/profile_textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textView_name" />

    <TextView
        android:id="@+id/profile_textView_cityCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/city_country"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textView_email" />

    <Button
        android:id="@+id/profile_show_friend_list_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/profile_show_friends"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/profile_textView_cityCountry" />

    <!-- MAY BE HIDING STUFF
    <ImageButton
        android:id="@+id/profile_imageButton_save"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:background="@drawable/save"
        android:contentDescription="@string/save_picture" />-->

</androidx.constraintlayout.widget.ConstraintLayout>