<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">

    <include layout="@layout/activity_base" />

    <TextView
        android:id="@+id/game_textView_scoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/game_scoreTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/game_frameLayout_boardFrame" />

    <TextView
        android:id="@+id/game_textView_blackScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/game_scoreDefaultText"
        app:layout_constraintStart_toStartOf="@+id/game_textView_scoreTitle"
        app:layout_constraintTop_toBottomOf="@+id/game_textView_scoreTitle" />

    <TextView
        android:id="@+id/game_textView_whiteScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_scoreDefaultText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintEnd_toEndOf="@+id/game_textView_scoreTitle"
        app:layout_constraintTop_toBottomOf="@+id/game_textView_scoreTitle" />

    <FrameLayout
        android:id="@+id/game_frameLayout_boardFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_textView_turnIndication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/game_blackTurn"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_frameLayout_boardFrame" />

    <Button
        android:id="@+id/game_button_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/game_buttonTextPass"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_frameLayout_boardFrame"/>

</androidx.constraintlayout.widget.ConstraintLayout>